--- a/etapa3.html
+++ b/etapa3.html
@@ -55,7 +55,7 @@
             </li>
             <li>
              <b>Levantamiento de estufas:</b>
-             Se apagan y levantan las estufas o criadoras para despejar el espacio y evitar que interfieran con las tareas de carga.
+             Se levantan las estufas para despejar el espacio y evitar que interfieran con las tareas de carga.
             </li>
             <li>
              <b>Levantamiento de comederos para el desbaste:</b>
@@ -81,4 +81,5 @@
         </footer>
 
     </body>    
+
 </html>
